# enumgen

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ToDo.md  vcpkg.json
cmake/: CMakeLists.txt  enumgen-config.cmake  enumgen-functions.cmake  enumgen.cmake  platform.cmake
example/: CMakeLists.txt  CMakePresets.json  README.md
example/enumgen/: enums.json
example/enumgen/templates/: enum.h.inja
example/src/: main.cpp
examples/: enums.eg.json
examples/templates/: enum.cpp.inja  enum.h.inja
examples/vcpkg-example/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
examples/vcpkg-example/enumgen/: config.json
examples/vcpkg-example/enumgen/templates/: enum.cpp.inja
examples/vcpkg-example/overlay-ports/enumgen/: portfile.cmake  usage  vcpkg.json
examples/vcpkg-example/src/: main.cpp
projects/: CMakeLists.txt
projects/codegen/: CMakeLists.txt
projects/codegen/src/: main.cpp
projects/codegen/src/codegen/: Config.cpp  Config.h  EnumGenerator.cpp  EnumGenerator.h
projects/enumgen/: CMakeLists.txt
projects/enumgen/src/: main.cpp
projects/enumgen/src/enumgen/: Config.cpp  Config.h  Enums.cpp  Enums.h  Enums.hpp  Logging.cpp  Logging.hpp
projects/enumgen_core/: CMakeLists.txt
projects/enumgen_core/src/enumgen/: Config.cpp  Enums.cpp  Logging.cpp  Logging.hpp
projects/enumgen_core/src/enumgen/generate/: GenerateArgs.hpp  GenerateCommand.cpp  GenerateCommand.hpp
projects/enumgen_core/src/enumgen/utils/: ArgParser.cpp  ArgParser.hpp  Commands.hpp  Parser.cpp  Parser.hpp  Traits.hpp
projects/enumgen_core/templates/: Version.hpp.in
projects/enumgen_core_tests/: CMakeLists.txt
projects/enumgen_core_tests/src/enumgen/generate/: GenerateCommandTests.cpp
projects/enumgen_core_tests/src/enumgen/helpers/: CommandLineHelpers.cpp  CommandLineHelpers.hpp
projects/enumgen_core_tests/src/enumgen/tests/: CommandLineHelpers.cpp  CommandLineHelpers.hpp
projects/enumgen_core_tests/src/enumgen/utils/: ArgParserTests.cpp  CommandTests.cpp  ParserTests.cpp  TraitsTests.cpp
templates/: enum.cpp.inja  enum.h.inja
